test/black-box/v4/2.exp
[Line 5] Semantic error : variable abacaxi used but not initialized
# Funcao principal do programa
void toc()
  int abacaxi
  int banana
  abacaxi = banana
