test/black-box/v4/2.toc
# Funcao principal do programa
void toc()
  int abacaxi, banana
  abacaxi = banana
